feat:initiated apk build

--- a/audiophile-store-app/app.json
+++ b/audiophile-store-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "audiophile-store-app",
-    "slug": "audiophile-store-app",
+    "slug": "audiophile-store-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -9,7 +9,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ibrahimdavid.audiophilestoremobile",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -19,7 +23,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.ibrahimdavid.audiophilestoremobile"
     },
     "web": {
       "output": "static",
@@ -43,6 +48,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "996b98de-664e-47ae-8d52-6a1fe1bcb591"
+      }
+    },
+    "owner": "ibrahimdavid"
   }
 }
